--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Card-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Card-Strings.json
@@ -294,7 +294,7 @@
   },
   "theBrewmaster:BarMatSpecial": {
     "NAME": "Bar Mat Special",
-    "DESCRIPTION": "Deal !D! damage. Deals !M! additional damage for each Brew card played this combat.",
+    "DESCRIPTION": "Deal !D! damage plus !M! additional damage for each Brew card played.",
     "EXTENDED_DESCRIPTION": [
       " NL (",
       " Brews played this combat.)"
