Update Abstract Card

--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-UI-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-UI-Strings.json
@@ -5,6 +5,11 @@
         "Gain 50 Intoxication."
       ]
     },
+    "theBrewmaster:BrewDescriptors": {
+      "TEXT": [
+        "Brew"
+      ]
+    },
     "theBrewmaster:FormulationAction": {
       "TEXT": [
         " exhaust."
