--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Relic-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Relic-Strings.json
@@ -3,49 +3,49 @@
     "NAME": "Beer Stein",
     "FLAVOR": "I've never heard of one drinks too many.",
     "DESCRIPTIONS": [
-      "Keep 75% of your Intoxication between floors and acts."
+      "Keep 75% of your #yIntoxication between floors and acts."
     ]
   },
   "theBrewmaster:GiantKegRelic": {
     "NAME": "Giant Keg",
     "FLAVOR": "I've had one drinks too many.",
     "DESCRIPTIONS": [
-      "Your Intoxication doesn't reset between floors and acts."
+      "Your #yIntoxication doesn't reset between floors and acts."
     ]
   },
   "theBrewmaster:SpiritHelmetRelic": {
     "NAME": "Spirit Helmet",
     "FLAVOR": "I've never heard of one drinks too many.",
     "DESCRIPTIONS": [
-      "If you would gain Intoxication, gain 150% that amount instead."
+      "If you would gain #yIntoxication, gain 150% that amount instead."
     ]
   },
   "theBrewmaster:LouseLiverRelic": {
     "NAME": "Louse Liver",
     "FLAVOR": "Much more efficient than the stock model.",
     "DESCRIPTIONS": [
-      "You become Intoxicated at 75 Intoxication instead of 100."
+      "You become Intoxicated at 75 #yIntoxication instead of 100."
     ]
   },
   "theBrewmaster:CozyBeerRelic": {
     "NAME": "Cozy Beer",
     "FLAVOR": "A little buddy to help lighten the load.",
     "DESCRIPTIONS": [
-      "You can Relax at Rest Sites. Starting your next combat with an additional 50 Intoxication."
+      "You can Relax at Rest Sites. Starting your next combat with an additional 50 #yIntoxication."
     ]
   },
   "theBrewmaster:EthanolFlaskRelic": {
     "NAME": "Ethanol Flask",
     "FLAVOR": "A lot of bad people made a lot of good money with this stuff.",
     "DESCRIPTIONS": [
-      "Enemies with Drenched take an additional 10% more damage from attacks per stack."
+      "Enemies with #yDrenched take an additional 10% more damage from attacks per stack."
     ]
   },
   "theBrewmaster:OctarineCupRelic": {
     "NAME": "Octarine Cup",
     "FLAVOR": "A staple at Spire Parties.",
     "DESCRIPTIONS": [
-      "Whenever you gain Intoxication for the first time each turn, gain [E]"
+      "Whenever you gain #yIntoxication for the first time each turn, gain [E]"
     ]
   },
   "theBrewmaster:MiniFridgeRelic": {
