--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Relic-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Relic-Strings.json
@@ -7,7 +7,7 @@
     ]
   },
   "theBrewmaster:GiantKegRelic": {
-    "NAME": "Giant Keg",
+    "NAME": "Bottomless Stein",
     "FLAVOR": "I've had one drinks too many.",
     "DESCRIPTIONS": [
       "Your #yIntoxication doesn't reset between floors and acts."
