--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Relic-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Relic-Strings.json
@@ -22,7 +22,7 @@
   },
   "theBrewmaster:LouseLiverRelic": {
     "NAME": "Louse Liver",
-    "FLAVOR": "It's really just a bunch of them stuck together.",
+    "FLAVOR": "It's really just a bunch lice glued together.",
     "DESCRIPTIONS": [
       "You become Intoxicated at #b75 #yIntoxication instead of #b100."
     ]
@@ -53,6 +53,13 @@
     "FLAVOR": "The Merchant will settle your bill at the end of your time in the Spire.",
     "DESCRIPTIONS": [
       "25% of the time, when you play a Brew card, create a random 0-cost Brew card with Exhaust in your hand."
+    ]
+  },
+  "theBrewmaster:SickBagRelic": {
+    "NAME": "Sick Bag",
+    "FLAVOR": "The Spire gives it's weakest stomachs its strongest bags.",
+    "DESCRIPTIONS": [
+      "Start each combat with 1 Weak. At the start of combat, apply 1 Vulnerable to ALL enemies."
     ]
   }
 }
