--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Stance-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Stance-Strings.json
@@ -2,7 +2,7 @@
   "theBrewmaster:Intoxicated": {
     "NAME": "Intoxicated",
     "DESCRIPTION": [
-      "Certain Brewmaster cards will have special effects while Intoxicated."
+      "Certain cards will have special effects while #yIntoxicated."
     ]
   }
 }
