--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Card-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Card-Strings.json
@@ -7,6 +7,26 @@
     "NAME": "Defend",
     "DESCRIPTION": "Gain !B! Block."
   },
+  "theBrewmaster:CinderMicro": {
+    "NAME": "Microbrew",
+    "DESCRIPTION": "Retain. NL Apply !M! thebrewmaster:Drenched. NL Exhaust."
+  },
+  "theBrewmaster:DefendMicro": {
+    "NAME": "Microbrew",
+    "DESCRIPTION": "Retain. NL Gain !B! Block. NL Exhaust."
+  },
+  "theBrewmaster:IntoxMicro": {
+    "NAME": "Microbrew",
+    "DESCRIPTION": "Retain. NL Gain !M! thebrewmaster:Intoxication. NL Exhaust."
+  },
+  "theBrewmaster:MedicalMicro": {
+    "NAME": "Microbrew",
+    "DESCRIPTION": "Retain. NL Heal !M! HP. NL Exhaust."
+  },
+  "theBrewmaster:VolatileMicro": {
+    "NAME": "Microbrew",
+    "DESCRIPTION": "Retain. NL Deal !D! damage. NL Exhaust."
+  },
   "theBrewmaster:CelestialBrew": {
     "NAME": "Celestial Brew",
     "DESCRIPTION": "Ethereal. NL Gain !M! Intangible. NL Exhaust.",
@@ -133,7 +153,7 @@
   },
   "theBrewmaster:FairyBrew": {
     "NAME": "Fairy Brew",
-    "DESCRIPTION": "Gain !M! Regen. NL thebrewmaster:Intoxicated: Gain !theBrewmaster:M2! life instead. NL Exhaust."
+    "DESCRIPTION": "Gain !M! Regen. NL thebrewmaster:Intoxicated: Heal !theBrewmaster:M2! HP instead. NL Exhaust."
   },
   "theBrewmaster:ExplodingKeg": {
     "NAME": "Exploding Keg",
@@ -357,5 +377,14 @@
   "theBrewmaster:OpenTab": {
     "NAME": "Open Tab",
     "DESCRIPTION": "{@@}Whenever you play a Brew card, draw !M! Brew card{!M!|>1=s}"
+  },
+  "theBrewmaster:BottomShelf": {
+    "NAME": "Bottom Shelf",
+    "DESCRIPTION": "{@@}Gain !B! Block. Add !M! Microbrew card{!M!|>1=s} to your hand."
+  },
+  "theBrewmaster:PartyFavors": {
+    "NAME": "Party Favors",
+    "DESCRIPTION": "Add X Upgraded Microbrew cards to your hand. Exhaust.",
+    "UPGRADE_DESCRIPTION": "Add X+1 Upgraded Microbrew cards to your hand. Exhaust."
   }
 }
