--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Power-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Power-Strings.json
@@ -68,7 +68,7 @@
   "theBrewmaster:DrenchedPower": {
     "NAME": "Drenched",
     "DESCRIPTIONS": [
-      "When damaged, all enemies take #b",
+      "When this enemy is damaged, remove all Drenched stacks and ALL enemies take #b",
       " damage."
     ]
   },
