--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Power-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Power-Strings.json
@@ -34,7 +34,7 @@
     "DESCRIPTIONS": [
       "Reducing unblocked damage by half. Taking #b",
       " damage in #b",
-      " turns."
+      " turns. This damage cannot lower your HP below #b1."
     ]
   },
   "theBrewmaster:VasoimmolationPower": {
